tests/expectations/compiler/structs/inline_member_pass.out
Error [EPAR0370005]: expected an identifier, ')', 'constant', 'private', 'public' -- found 'let'
    --> compiler-test:7:19
     |
   7 |     function main(let x: u8, y: bool) -> bool {
     |                   ^^^
